syntax = "proto3";

package o5.deployer.v1.topic;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "o5/application/v1/application.proto";
import "o5/deployer/v1/deployment.proto";
import "o5/messaging/v1/annotations.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/deployer/v1/deployer_tpb";

service DeployerInputTopic {
  option (o5.messaging.v1.config).unicast.name = "o5-deployer-input";

  rpc RequestDeployment(RequestDeploymentMessage) returns (google.protobuf.Empty) {}
}

message RequestDeploymentMessage {
  string deployment_id = 1 [(buf.validate.field).string.uuid = true];
  o5.application.v1.Application application = 2;
  string version = 3;
  string environment_id = 4 [(buf.validate.field).string.uuid = true];

  o5.deployer.v1.DeploymentFlags flags = 5;
  o5.deployer.v1.CodeSourceType source = 6;
}
